--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Nimit Johri</title>
   </head>
   <body>
+    <h1>Pluralsight</h1>
+    <ul>
+      <li>ios 11</li>
+      <li>Android</li>
+    </ul>
 
   </body>
 </html>
