--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nimit Johri</title>
   </head>
   <body>
-    <h1>Pluralsight</h1>
+    <h1>Hello, Pluralsight</h1>
     <ul>
       <li>ios 11</li>
       <li>Android</li>
